# 12.DATA

./: CMakeLists.txt
src/: MapReduce.cpp  MapReduce.h  main.cpp
